--- a/Scratchpage.html
+++ b/Scratchpage.html
@@ -120,7 +120,7 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <div class="image-container">
-                <img src="millsite.jpeg" alt="Golf Course" style="max-width:100%;">
+                <img src="dist/millsite.jpeg" alt="Golf Course" style="max-width:100%;">
                 <p>The boys</p>
             </div>
         </section>
